--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#education">Why Us</a>
-        <a href="#teacher">Teacher</a>
+        <a href="#teacher">Management Team</a>
         <a href="#gallery">Gallery</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -228,7 +228,7 @@
         <div class="box">
           <img src="images/teachers/ECA Coordinator.jpg" alt="ECA Coordinator-Mani Khatiwada LAA" />
           <h3>Mr. Mani Khatiwada</h3>
-          <p>ECA Coordinator</p>
+          <p>Managing Director</p>
           <p></p>
           <div class="share">
             <a href="tel:9849637925"><i class="fas fa-phone-alt"></i></a>
