--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:locale" content="en_US">
+
+    <meta name="google-site-verification" content="GdtA3EFGJ08gtgvM4LdjIQjJAaQ2_rG3ZLjiJi19lFU" />
+
     <meta property="og:type" content="website">
     <meta property="og:title" content="Lok Aadarsha Academy | LAA -">
     <meta property="og:url" content="https://www.laa.edu.np">
