--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
       <div class="content">
         <h3>Welcome to <br><span>Lok Aadarsha Academy</span></h3>
         <p>
-          <b>  Our Vision  </b><br>
-          At Lok Aadarsha Academy, Our vision is to create a nurturing and dynamic learning environment where every student is inspired to achieve their full potential. We strive to cultivate curious minds, compassionate hearts, and resilient spirits, preparing our students to become innovative leaders and responsible global citizens.
+          <b> Our Vision  </b><br>
+          Our vision is to create a nurturing and dynamic learning environment where every student is inspired to achieve their full potential. We strive to cultivate curious minds, compassionate hearts, and resilient spirits, preparing our students to become innovative leaders and responsible global citizens.
           <br><br>
         </p>
         <div class="share">
           <a href="tel:01-4330932"><i class="fas fa-phone-alt"></i></a>
-          <a href="https://www.google.com/maps/place/School/@27.6862986,85.2800592,72m/data=!3m1!1e3!4m14!1m7!3m6!1s0x39eb1948f56c7f11:0x57f5254d1c374bc6!2sLok+Adarsha+Academy!8m2!3d27.6839646!4d85.2806981!16s%2Fg%2F11gk0ft12w!3m5!1s0x39eb1952b39fdca3:0x3866d4f8ddfd1ba7!8m2!3d27.686182!4d85.2803031!16s%2Fg%2F11sdc9shqv?entry=ttu" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"></i></a>
+          <a href="https://www.google.com/maps/place/School/@27.6862986,85.2800592,72m/data=!3m1!1e3!4m14!1m7!3m6!1s0x39eb1948f56c7f11:0x57f5254d1c374bc6!2sLok+Adarsha+Academy!8m2!3d27.6839646!4d85.2806981!16s%2Fg%2F11gk0ft12w!3m5!1s0x39eb1952b39fdca3:0x3866d4f8ddfd1ba7!8m2!3d27.686182!4d85.2803031!16s%2Fg%2F11sdc9shqv?entry=ttu" target="_blank"><i class="fas fa-map-marked"></i></a>
           <a href= "mailto: lokaadarsha@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
         </div>
         <a href="https://www.facebook.com/profile.php?id=100082806622318" class="btn" target="_blank"><i class="fab fa-facebook"></i> &nbsp;  Follow Us   &nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
