--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--- Lok Aadarsha Academy -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:locale" content="en_US">
-
-    <meta name="google-site-verification" content="GdtA3EFGJ08gtgvM4LdjIQjJAaQ2_rG3ZLjiJi19lFU" />
-
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Lok Aadarsha Academy | LAA -">
-    <meta property="og:url" content="https://www.laa.edu.np">
-    <meta property="og:site_name" content="Lok Aadarsha Academy | LAA -">
-    <title>Lok Aadarsha Academy - Kirtipur, Kathmandu</title>
-    <!---- SEO-------------->
-    <script type="application/ld+json">
-        {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "Lok Aadarsha Academy | LAA -",
-        "alternateName": ["LAA", "Lok Aadarsha", "Lok Aadarsha School Kirtipur"],
-        "url": "https://laa.edu.np/"
-        }
-    </script>
+    <!-- Lok Aadarsha Academy -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Lok Aadarsha Academy | LAA -">
+  <meta property="og:url" content="https://www.laa.edu.np">
+  <meta property="og:site_name" content="Lok Aadarsha Academy | LAA -">
+  <title>Lok Aadarsha Academy - Kirtipur, Kathmandu</title>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Lok Aadarsha Academy | LAA -",
+    "alternateName": ["LAA", "Lok Aadarsha", "Lok Aadarsha School Kirtipur"],
+    "url": "https://laa.edu.np/"
+  }
+  </script>
 
     <!---LOGO -->
     <link rel="shortcut icon" type="my-icon" href="images/logo.png">
