Search Engine Optimization! SEO-1

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Lok Aadarsha Academy | LAA -">
+  <meta property="og:title" content="Lok Aadarsha Academy - Kirtipur, Kathmandu">
   <meta property="og:url" content="https://www.laa.edu.np">
   <meta property="og:site_name" content="Lok Aadarsha Academy | LAA -">
   <title>Lok Aadarsha Academy - Kirtipur, Kathmandu</title>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "name": "Lok Aadarsha Academy | LAA -",
+    "name": "Lok Aadarsha Academy",
     "alternateName": ["LAA", "Lok Aadarsha", "Lok Aadarsha School Kirtipur"],
-    "url": "https://laa.edu.np/"
+    "url": "https://www.laa.edu.np/"
   }
   </script>
 
@@ -30,16 +31,6 @@
     <!-- CSS Libraries  -->
     <link rel="stylesheet" href="style.css" />
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XPX0W9MSQ5"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-XPX0W9MSQ5');
-    </script>
-
   </head>
   <body>
 
@@ -47,7 +38,7 @@
 
     <header class="header">
       <a href="#" class="logo">
-        <img src="images/logo.png" class="logo-img"
+        <img src="images/logo.png" class="logo-img" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy"
       /></a>
 
     <div class="motto">
@@ -89,7 +80,7 @@
       </div>
 
       <div class="image">
-        <img src="images/school_home.jpg" alt="" />
+        <img src="images/school_home.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
       </div>
 
       <div class="custom-shape-divider-bottom-1684324473">
@@ -116,7 +107,7 @@
 
       <div class="row">
         <div class="image">
-          <img src="images/about.jpg" alt="" />
+          <img src="images/about.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
         </div>
 
         <div class="content">
@@ -155,7 +146,7 @@
           <p>
             Our state-of-the-art futsal field provides students with the opportunity to engage in team sports and stay active.
           </p>
-          <img src="images/education2.png" alt="" />
+          <img src="images/education2.png" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
         </div>
 
         <div class="box">
@@ -163,7 +154,7 @@
           <p>
             Students can unleash their creativity through our engaging drawing classes, designed to develop artistic skills.
           </p>
-          <img src="images/education3.png" alt="" />
+          <img src="images/education3.png" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
         </div>
 
         <div class="box">
@@ -171,7 +162,7 @@
           <p>
             Our diverse range of ECAs ensures holistic development, offering students various clubs and activities beyond academics.
           </p>
-          <img src="images/education4.png" alt="" />
+          <img src="images/education4.png" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
         </div>
 
         <div class="box">
@@ -179,7 +170,7 @@
           <p>
             Educational tours provide hands-on learning experiences, making education more interactive and enjoyable. Our educational expeditions encourage exploration and adventure, fostering a love for learning through real-world experiences.
           </p>
-          <img src="images/education3.png" alt="" />
+          <img src="images/education3.png" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
         </div>
 
         <div class="box">
@@ -187,7 +178,7 @@
           <p>
             Our well-equipped science lab gives students the chance to conduct experiments and deepen their understanding of scientific concepts.
           </p>
-          <img src="images/education6.png" alt="" />
+          <img src="images/education6.png" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
         </div>
 
       </div>
@@ -203,7 +194,7 @@
       <div class="box-container">
 
         <div class="box">
-          <img src="images/teachers/principal.jpg" alt="Principal-Rajesh Khatiwada LAA" />
+          <img src="images/teachers/principal.jpg" alt="Principal-Rajesh Khatiwada LAA | Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <h3>Mr. Rajesh Khatiwada</h3>
           <p>Principal</p>
           <div class="share">
@@ -214,7 +205,7 @@
         </div>
 
         <div class="box">
-          <img src="images/teachers/chairperson.jpg" alt="Chairperson-Pradeep Wagle LAA" />
+          <img src="images/teachers/chairperson.jpg" alt="Chairperson-Pradeep Wagle LAA | Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <h3>Mr. Pradeep Wagle</h3>
           <p>Chairperson</p>
           <div class="share">
@@ -225,7 +216,7 @@
         </div>
 
         <div class="box">
-          <img src="images/teachers/Vice Principal.jpg" alt="Vice Principal-Sanjaya Soti LAA" />
+          <img src="images/teachers/Vice Principal.jpg" alt="Vice Principal-Sanjaya Soti LAA | Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <h3>Mr. Sanjaya Soti</h3>
           <p>Vice Principal</p>
           <div class="share">
@@ -236,7 +227,7 @@
         </div>
 
         <div class="box">
-          <img src="images/teachers/ECA Coordinator.jpg" alt="ECA Coordinator-Mani Khatiwada LAA" />
+          <img src="images/teachers/ECA Coordinator.jpg" alt="ECA Coordinator-Mani Khatiwada LAA | Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <h3>Mr. Mani Khatiwada</h3>
           <p>Managing Director</p>
           <p></p>
@@ -259,102 +250,102 @@
 
       <div class="gallery-container">
         <a href="images/gallery/gallery1.jpg" class="box">
-          <img src="images/gallery/gallery1.jpg" alt="" />
+          <img src="images/gallery/gallery1.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery2.jpg" class="box">
-          <img src="images/gallery/gallery2.jpg" alt="" />
+          <img src="images/gallery/gallery2.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery3.jpg" class="box">
-          <img src="images/gallery/gallery3.jpg" alt="" />
+          <img src="images/gallery/gallery3.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery4.jpg" class="box">
-          <img src="images/gallery/gallery4.jpg" alt="" />
+          <img src="images/gallery/gallery4.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery5.jpg" class="box">
-          <img src="images/gallery/gallery5.jpg" alt="" />
+          <img src="images/gallery/gallery5.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery6.jpg" class="box">
-          <img src="images/gallery/gallery6.jpg" alt="" />
+          <img src="images/gallery/gallery6.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery7.jpg" class="box">
-          <img src="images/gallery/gallery7.jpg" alt="" />
+          <img src="images/gallery/gallery7.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery8.jpg" class="box">
-          <img src="images/gallery/gallery8.jpg" alt="" />
+          <img src="images/gallery/gallery8.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery9.jpg" class="box">
-          <img src="images/gallery/gallery9.jpg" alt="" />
+          <img src="images/gallery/gallery9.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery10.jpg" class="box">
-          <img src="images/gallery/gallery10.jpg" alt="" />
+          <img src="images/gallery/gallery10.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery11.jpg" class="box">
-          <img src="images/gallery/gallery11.jpg" alt="" />
+          <img src="images/gallery/gallery11.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery12.jpg" class="box">
-          <img src="images/gallery/gallery12.jpg" alt="" />
+          <img src="images/gallery/gallery12.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery13.jpg" class="box">
-          <img src="images/gallery/gallery13.jpg" alt="" />
+          <img src="images/gallery/gallery13.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery14.jpg" class="box">
-          <img src="images/gallery/gallery14.jpg" alt="" />
+          <img src="images/gallery/gallery14.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery15.jpg" class="box">
-          <img src="images/gallery/gallery15.jpg" alt="" />
+          <img src="images/gallery/gallery15.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery16.jpg" class="box">
-          <img src="images/gallery/gallery16.jpg" alt="" />
+          <img src="images/gallery/gallery16.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/galllery17.jpg" class="box">
-          <img src="images/gallery/galllery17.jpg" alt="" />
+          <img src="images/gallery/galllery17.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery18.jpg" class="box">
-          <img src="images/gallery/gallery18.jpg" alt="" />
+          <img src="images/gallery/gallery18.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery19.jpg" class="box">
-          <img src="images/gallery/gallery19.jpg" alt="" />
+          <img src="images/gallery/gallery19.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
         <a href="images/gallery/gallery20.jpg" class="box">
-          <img src="images/gallery/gallery20.jpg" alt="" />
+          <img src="images/gallery/gallery20.jpg" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
           <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
 
@@ -381,7 +372,6 @@
           <i class="fas fa-envelope"></i>
           <h3>Email</h3>
           <p>lokaadarsha@gmail.com</p>
-          <p>recuritement@laa.edu.np</p>
           <p>contact@laa.edu.np</p>
         </div>
 
@@ -396,7 +386,7 @@
 
       <div class="row">
         <div class="image">
-          <img src="images/contact.gif" alt="" />
+          <img src="images/contact.gif" alt="Lok Aadarsha Academy - Kirtipur, Kathmandu | LAA | Lok Aadarsha | lok aadarsha academy" />
         </div>
 
         <form action="https://api.web3forms.com/submit" target="_blank" method="POST">
