Google Search Console Re-Crawl!

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </section>
 
-    <!-- home section Ends -->
+    <!-- Home section Ends -->
 
     <!-- About Us section Starts -->
 
